--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,4 +1,18 @@
+.top {
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.title {
+    font-size: 2rem;
+    margin: auto;
+}
+
 .bottom {
+    height: 60vh;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
