--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    background: rgb(239, 138, 129);
+    background: linear-gradient(
+        57deg,
+        rgba(239, 138, 129, 1) 0%,
+        rgba(241, 223, 255, 1) 48%,
+        rgba(248, 191, 76, 1) 100%
+    );
+    background-attachment: fixed;
+}
