add card items reset button

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,5 +1,5 @@
 .top {
-    height: 40vh;
+    height: 42vh;
     display: flex;
     flex-direction: column;
 }
@@ -10,9 +10,30 @@
 }
 
 .bottom {
-    height: 60vh;
+    height: 58vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.list {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     flex-wrap: wrap;
+}
+
+.resetBtn {
+    margin: 0 auto;
+    cursor: pointer;
+    width: 13rem;
+    height: 4rem;
+    background: rgb(192, 170, 255);
+    background: linear-gradient(
+        82deg,
+        rgba(192, 170, 255, 1) 0%,
+        rgba(255, 145, 253, 1) 100%
+    );
+    border-radius: 1.5rem;
+    border: 0.4rem solid black;
+    font-size: 2rem;
 }
